[gd_scene load_steps=11 format=3 uid="uid://dw1xhin6im8kv"]

[ext_resource type="Script" path="res://Scenes/hud.gd" id="1_ocri0"]
[ext_resource type="LabelSettings" uid="uid://bj4owgofe5ayt" path="res://Resources/textstyle.tres" id="2_8bg75"]
[ext_resource type="LabelSettings" uid="uid://cnoygoxh0kgme" path="res://Resources/small_textstyle.tres" id="3_6pdgi"]
[ext_resource type="PackedScene" uid="uid://c7j5jqynag4uw" path="res://transition.tscn" id="3_j61ry"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/joystick/virtual_joystick.tscn" id="5_vxcta"]
[ext_resource type="Texture2D" uid="uid://b7fpmcg7ian2w" path="res://Art and Sound/missile/spr_missile.png" id="6_o465q"]

[sub_resource type="Animation" id="Animation_c728u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PressAnyKeyLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BulletsBar:tint_progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.682353, 0.384314, 1)]
}

[sub_resource type="Animation" id="Animation_0he1m"]
resource_name = "fullBar"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BulletsBar:tint_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0.682353, 0.384314, 1), Color(1, 1, 1, 1), Color(1, 0.682353, 0.384314, 1)]
}

[sub_resource type="Animation" id="Animation_ye65v"]
resource_name = "showText"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PressAnyKeyLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kulbx"]
_data = {
"RESET": SubResource("Animation_c728u"),
"fullBar": SubResource("Animation_0he1m"),
"showText": SubResource("Animation_ye65v")
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ocri0")

[node name="DeathLabel" type="Label" parent="."]
visible = false
offset_left = 1.0
offset_top = 204.0
offset_right = 647.0
offset_bottom = 408.0
text = "Game over
"
label_settings = ExtResource("2_8bg75")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 651.0
offset_bottom = 98.0
text = "0"
label_settings = ExtResource("2_8bg75")
horizontal_alignment = 2

[node name="HighscoreLabel" type="Label" parent="."]
visible = false
offset_left = 18.0
offset_top = 568.0
offset_right = 633.0
offset_bottom = 924.0
label_settings = ExtResource("2_8bg75")
horizontal_alignment = 1

[node name="LowestScoreLabel" type="Label" parent="."]
visible = false
offset_left = 15.0
offset_top = 797.0
offset_right = 634.0
offset_bottom = 934.0
label_settings = ExtResource("2_8bg75")

[node name="PressAnyKeyLabel" type="Label" parent="."]
visible = false
offset_left = 18.0
offset_top = 993.0
offset_right = 633.0
offset_bottom = 1140.0
theme_override_font_sizes/font_size = 20
text = "Press 
any key
 to restart"
label_settings = ExtResource("3_6pdgi")
horizontal_alignment = 1

[node name="TransitionScreen" parent="." instance=ExtResource("3_j61ry")]
unique_name_in_owner = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_kulbx")
}

[node name="Virtual Joystick" parent="." instance=ExtResource("5_vxcta")]
modulate = Color(1, 1, 1, 0.52549)
offset_top = -259.0
offset_right = 262.0
pressed_color = Color(0.745098, 0.745098, 0.745098, 0.360784)
joystick_mode = 1
visibility_mode = 1
action_left = "left"
action_right = "right"
action_up = "up"
action_down = "down"

[node name="LivesLabel" type="Label" parent="."]
offset_right = 138.0
offset_bottom = 70.0
text = "Lives: 3"
label_settings = ExtResource("3_6pdgi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BulletsBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
offset_left = 143.0
offset_top = 18.0
offset_right = 543.0
offset_bottom = 52.0
max_value = 5.0
value = 5.0
fill_mode = 1
texture_progress = ExtResource("6_o465q")
tint_under = Color(1, 1, 1, 0.270588)
tint_progress = Color(1, 0.682353, 0.384314, 1)
